# Factory

./: .env.example  .gitignore  README.md  docker-compose.yml
control-room/: README.md  package.json  tsconfig.json
control-room/app/: globals.css  layout.tsx  page.tsx
control-room/app/docs/[...slug]/: page.tsx
control-room/app/factory/: page.tsx
control-room/app/projects/[slug]/: page.tsx
control-room/components/: Markdown.tsx
control-room/data/: projects.ts
control-room/lib/: workspace.ts
docs/: COMMERCE_FACTORY.md  DIVISION.md  ProductRoadmap.md
orchestrator/: README.md  pyproject.toml
orchestrator/config/: litellm.config.yaml  settings.example.toml
orchestrator/pw-runner/: README.md
orchestrator/src/orchestrator/: __init__.py  config.py  mail.py  main.py  models.py
orchestrator/tests/: test_config.py  test_mail.py
projects/: README.md
projects/glp1-companion/: README.md
projects/glp1-companion/.mail/inbox/: glp1-companion__architect.md
projects/glp1-companion/docs/: LLM_STACK.md
