[project]
name = "commerce-factory-orchestrator"
version = "0.1.0"
description = "Async orchestrator loop for the Commerce Factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "rich>=13.7"
]

[project.scripts]
orchestrator = "orchestrator.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
